istio/ch6_elastic/simple-backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-backend
  name: simple-backend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: simple-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-backend
  name: simple-backend-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-backend
  template:
    metadata:
      labels:
        app: simple-backend
    spec:
      serviceAccountName: simple-backend
      containers:
        - env:
            - name: "LISTEN_ADDR"
              value: "0.0.0.0:8080"
            - name: "SERVER_TYPE"
              value: "http"
            - name: "NAME"
              value: "simple-backend"
            - name: "MESSAGE"
              value: "Hello from simple-backend-1"
            - name: "TIMING_VARIANCE"
              value: "40ms"
            - name: "TIMING_50_PERCENTILE"
              value: "150ms"
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: nicholasjackson/fake-service:v0.17.0
          imagePullPolicy: IfNotPresent
          name: simple-backend
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            privileged: false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-backend
  name: simple-backend-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-backend
  template:
    metadata:
      labels:
        app: simple-backend
    spec:
      serviceAccountName: simple-backend
      containers:
        - env:
            - name: "LISTEN_ADDR"
              value: "0.0.0.0:8080"
            - name: "SERVER_TYPE"
              value: "http"
            - name: "NAME"
              value: "simple-backend"
            - name: "MESSAGE"
              value: "Hello from simple-backend-2"
            - name: "TIMING_VARIANCE"
              value: "10ms"
            - name: "TIMING_50_PERCENTILE"
              value: "150ms"
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: nicholasjackson/fake-service:v0.22.6
          imagePullPolicy: IfNotPresent
          name: simple-backend
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            privileged: false
