istio/ch6_elastic/simple-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-web
  name: simple-web
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: simple-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-web
  name: simple-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      serviceAccountName: simple-web
      containers:
        - env:
            - name: "LISTEN_ADDR"
              value: "0.0.0.0:8080"
            - name: "UPSTREAM_URIS"
              value: "http://simple-backend:80/"
            - name: "SERVER_TYPE"
              value: "http"
            - name: "NAME"
              value: "simple-web"
            - name: "MESSAGE"
              value: "Hello from simple-web!!!"
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: nicholasjackson/fake-service:v0.22.6
          imagePullPolicy: IfNotPresent
          name: simple-web
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          securityContext:
            privileged: false
